# FaceTrackerAndroidSample

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ghlab/facetracker/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ghlab/facetracker/: ActivityExtensions.kt  AutoFitTextureView.kt  CameraBasicFragment.kt  CompareSizesByArea.kt  ConfirmationDialog.kt  Constants.kt  ErrorDialog.kt  ImageSaver.kt  MainActivity.kt
app/src/main/java/com/ghlab/facetracker/jni/: FaceTrackerJNI.java  FaceTrackerResult.java
app/src/main/jni/: AssetIstream.cpp  AssetIstream.h  CLM.cc  CMakeLists.txt  FDet.cc  FaceTracker.cpp  FaceTracker.h  FaceTrackerJNI.cpp  FaceTrackerJNI.h  IO.cc  PDM.cc  Patch.cc  Tracker.cc
app/src/main/jni/include/FaceTracker/: IO.h  Tracker.h
app/src/main/res/layout/: fragment_camera.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ghlab/facetracker/: ExampleUnitTest.kt
